--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
 
 <body>
 <div>
-    <button id="run">Run</button>
+    <button id="run">block hotkeys</button>
     <input/>
+    <br/>
+    <button id="acc">permissions</button>
+    <p id="acc-p"></p>
 </div>
 </body>
 </html>
